[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = {version = "0.7.9", features = ["tower-log"] }
axum-extra = {version = "0.9.6", features = ["cookie"] }
backtrace = "0.3.74"
clap = {version = "4.5.23", features = ["derive","env"]}
dotenvy = "0.15.7"
fantoccini = "0.21.2"
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
