[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
axum = {version = "0.7.9", features = ["tower-log"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
backtrace = "0.3.74"
chrono = "0.4.39"
clap = {version = "4.5.23", features = ["derive","env"]}
dotenvy = "0.15.7"
fantoccini = "0.21.2"
http-body = "1.0.1"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
regex = "1.11.1"
rust-embed = "8.5.0"
sea-orm = {version = "1.1.2",features = [  "sqlx-sqlite","debug-print",
    "with-uuid",
    "macros",
    "with-json",
    "runtime-tokio-rustls",]}
serde = "1.0.216"
serde_json = "1.0.133"
sqlx = {version="0.8.2", features = ["runtime-tokio-rustls", "sqlite", "time",  "uuid"] }
thiserror = "2.0.7"
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
uuid = {version = "1.11.0",features = ["v4", "fast-rng"] }
validator = { version = "0.18", features = ["derive"] }
